[bug fix] z-index on header

--- a/src/scss/base/header.scss
+++ b/src/scss/base/header.scss
@@ -2,6 +2,7 @@
 .unified header {
     position: sticky;
     top: 0;
+    z-index: 999;
     background-color: rgba($gray-950, 0.8);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
